fix password overflow

--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -77,14 +77,11 @@ app-header {
       position: absolute;
       left: 20px;
     }
+  }
 
-    .error {
-      position: absolute;
-      top: 57px;
-      left: 21px;
-      font-size: 14px;
-      color: #ed1e79;
-    }
+  .error {
+    font-size: 14px;
+    color: #ed1e79;
   }
 
   button {
